<resources>
    <string name="app_name">StoryDicoding</string>
    <string name="email">E-mail</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="welcome_title">Welcome to StoryDicoding!</string>
    <string name="welcome_paragraph">Want to know stories from friends who are studying or who have graduated from coding?, Or want to share stories while studying coding?. Just in Story Dicoding!</string>
    <string name="signup">Signup</string>
    <string name="welcome_name">Welcome %1$s</string>
    <string name="logout">Logout</string>
    <string name="image">Image</string>
    <string name="title_login">Can\'t wait to share the story?</string>
    <string name="desc_login">Enter your data first</string>
    <string name="input_email">Enter your email here</string>
    <string name="input_password">Enter your password here</string>
    <string name="desc_btnlogin">Login button to enter the main page</string>
    <string name="image_share">Image of the story you want to share</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="input_story">What do you want to tell?</string>
    <string name="upload">Upload</string>
    <string name="fab_createStory">Switch page button to add your story</string>
    <string name="image_story">Photos from your friends\' stories</string>
    <string name="title_signup">Fill in your data first, okay?</string>
    <string name="add_story">Add Story</string>
    <string name="error_desc_story">You have to fill in first</string>
    <string name="warning_image_story">Please enter the image file first</string>
    <string name="message_success_add_story">Yey!, story has been added</string>
    <string name="message_fail_add_story">Yaaaah, failed to add a story. Try again</string>
    <string name="error_email_empty">Enter your e-mail first</string>
    <string name="error_password_empty">Enter your password first</string>
    <string name="login_alert_dialog">Login!</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="message_login_success">You have successfully logged in. Time to read stories from your friends</string>
    <string name="message_fail_login">Sorry, you failed to login. Try again</string>
    <string name="error_valid_email">Invalid Email!</string>
    <string name="error_password_6_char">Password must be more than 6 characters</string>
    <string name="empty_error_desc_story">You have to fill in first</string>
    <string name="error_input_name">Enter name</string>
    <string name="error_input_email">Enter e-mail</string>
    <string name="error_input_password">Enter password</string>
    <string name="signup_alert_dialog">SignUp!</string>
    <string name="message_success_signup">Your account is ready. Come on, login and share your learning story in coding</string>
    <string name="message_fail_signup">You seem to have already created an account or maybe there are other problems. Try logging in first</string>
    <string name="message_success_load_list">The story list has been successfully loaded.</string>
    <string name="message_fail_load_list">Story list failed to load.</string>
    <string name="language_setting">Language setting</string>
    <string name="empty_data">Sorry, data is empty.</string>
    <string name="map_mode">Map Mode</string>
    <string name="message_success_list_story_map_mode">Story list in map mode loaded successfully</string>
    <string name="message_fail_list_story_map_mode">Story list in map mode failed to load</string>
    <string name="try_again">Try again</string>
    <string name="fail_msg_parsing_map_style">Map style parsing failed.</string>
    <string name="exception_msg_parsing_map_style">Can\'t find style. Error: %1$s</string>
    <string name="location_not_found">Location is not found. Try Again</string>
</resources>